# SuperLauncherMC-for-linux

./: .gitignore  PKGBUILD  README.md  build-arch.sh  build-deb.sh  build.sh  git-auto-sync.sh  pyproject.toml  requirements.txt  setup.py  superlauncher-autosync.service  superlauncher.desktop  superlauncher.py  superlauncher.spec
SuperLauncher/: __main__.py  main.py  requirements.txt
SuperLauncher/backend/: __init__.py  account.py  builds.py  discord_rpc.py  minecraft.py  servers.py  skins.py  updates.py
SuperLauncher/core/: __init__.py  config.py  constants.py  platform.py  translations.py
SuperLauncher/models/: types.py
SuperLauncher/network/: __init__.py  api_client.py  curseforge.py  modrinth.py
SuperLauncher/ui/: __init__.py  glass_frame.py  main_window.py  sidebar.py  theme.py
SuperLauncher/ui/dialogs/: create_server_dialog.py  login_dialog.py  server_control_dialog.py
SuperLauncher/ui/pages/: __init__.py  account_page.py  ai_agent_page.py  builds_page.py  home_page.py  minecraft_page.py  mods_page.py  news_page.py  servers_page.py  settings_page.py  skins_page.py  updates_page.py
SuperLauncherCpp/: CMakeLists.txt
SuperLauncherCpp/resources/: resources.qrc
SuperLauncherCpp/resources/lang/: en.json  ru.json
SuperLauncherCpp/src/: main.cpp
SuperLauncherCpp/src/backend/: AccountSystem.cpp  AccountSystem.h  BuildsManager.cpp  BuildsManager.h  DiscordRPC.cpp  DiscordRPC.h  MinecraftLauncher.cpp  MinecraftLauncher.h  ModManager.cpp  ModManager.h  ServerManager.cpp  ServerManager.h  SkinsManager.cpp  SkinsManager.h  UpdateChecker.cpp  UpdateChecker.h
SuperLauncherCpp/src/core/: AppConfig.cpp  AppConfig.h  Constants.h  PlatformSupport.cpp  PlatformSupport.h  Translations.cpp  Translations.h  Utils.h
SuperLauncherCpp/src/models/: Mod.h  Modpack.h  Server.h  Skin.h  User.h
SuperLauncherCpp/src/network/: ApiClient.cpp  ApiClient.h  CurseForgeAPI.cpp  CurseForgeAPI.h  ModrinthAPI.cpp  ModrinthAPI.h
SuperLauncherCpp/src/ui/: MainWindow.cpp  MainWindow.h  ModernSidebar.cpp  ModernSidebar.h
SuperLauncherCpp/src/ui/dialogs/: CreateServerDialog.cpp  CreateServerDialog.h  LoginDialog.cpp  LoginDialog.h  ServerControlDialog.cpp  ServerControlDialog.h
SuperLauncherCpp/src/ui/pages/: AIAgentPage.cpp  AIAgentPage.h  AccountPage.cpp  AccountPage.h  BuildsPage.cpp  BuildsPage.h  HomePage.cpp  HomePage.h  MinecraftPage.cpp  MinecraftPage.h  ModsPage.cpp  ModsPage.h  NewsPage.cpp  NewsPage.h  ServersPage.cpp  ServersPage.h  SettingsPage.cpp  SettingsPage.h  SkinsPage.cpp  SkinsPage.h  UpdatesPage.cpp  UpdatesPage.h
SuperLauncherCpp/src/ui/widgets/: AnimatedButton.cpp  AnimatedButton.h  GlassFrame.cpp  GlassFrame.h  GradientLabel.cpp  GradientLabel.h  ServerCardWidget.cpp  ServerCardWidget.h  SkinWidget.cpp  SkinWidget.h
debian/: control  copyright  rules  superlauncher-cpp.install  superlauncher.install
