[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "superlauncher"
version = "2.0.0"
description = "Minecraft launcher with mod support and server management"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.5",
    "requests>=2.28",
    "packaging>=23.0",
    "Pillow>=9.0",
    "pypresence>=4.3",
    "tqdm>=4.64",
]

[project.scripts]
superlauncher = "SuperLauncher.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
